# Orrery

./: .gitignore  CMakeLists.txt  README.md  Report.md  common.h  main.cpp  main_deprecated.cpp
assets/objects/barrel/: Barrel.mtl
assets/objects/barrelpack/: barrels_packed.mtl
assets/objects/box/: box_resize.mtl
assets/objects/ground/: ground.mtl
assets/objects/hawk/: SparrowHawk.fbx
assets/objects/knightguard/: KnightGuard-nospear.fbx  Knighty92-onlyman.fbx  Knighty92.fbx  Knighty92.mtl
assets/objects/ruins/: Ruins-Pillars-Arch.mtl
assets/objects/signature/: signature-tomix.mtl
assets/shaders/: fragment.glsl  light_item.vert  loadobj.frag  loadobj.vert  loadobj_nolight.frag  loadobj_nolight.vert  vertex.glsl
docs/: note.md  opengl_note.md
figs/: structure.drawio
libs/: func.cpp
sln/: .gitignore  ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  EscapeDungeon.sln  EscapeDungeon.vcxproj  EscapeDungeon.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake
src/: assimp2glm.h  common.h  glad.c  utils.cpp  utils.h
src/animation/: Animation.cpp  Animation.h  Animator.cpp  Animator.h  animdata.h
src/application/: Application.cpp  Application.h  Interact.h
src/camera/: Camera.cpp  Camera.h
src/light/: Light.h
src/model/: Bone.cpp  Bone.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h
src/object/: Mesh.cpp  Mesh.h  Model.cpp  Model.h
src/physics/: CollisionCB.h
src/shader/: Shader.cpp  Shader.h
src/world/: Object.cpp  Object.h  Player.cpp  Player.h  World.cpp  World.h
